--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>عرض تقييم اللجان</title>
+  <title>نتائج تقييم اللجان</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
@@ -58,8 +58,7 @@
 <body>
   <div class="container-fluid">
     <div class="sticky-header">
-      <!-- إزالة أيقونة 📊 كما طُلب -->
-      <h3 class="text-center mb-4">عرض تقييم اللجان</h3>
+      <h3 class="text-center mb-4">نتائج تقييم اللجان</h3>
 
       <!-- الفلاتر -->
       <div class="filters row justify-content-center no-print">
